# betterNOT

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  reduce.sh  template.yaml  wiserep_upload.py  wisereport.py
.github/workflows/: continous_integration.yml
betternot/: credentials.py  findingchart.py  fritz.py  io.py  observability.py  utils.py  wiserep.py
data/: ZTF23aaawbsc_combined_3850.ascii  template.yaml  template_allowed_values.json
tests/: test_obsprep.py  test_wiserep.py
