[tool.poetry]
name = "betternot"
version = "0.1.0"
description = "Toolset for interacting with the Nordic Optical Telescope (NOT)"
authors = ["simeonreusch <simeon.reusch@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.scripts]
not = "main:run"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
astropy = "^5.3"
numpy = "^1.25.0"
pandas = ">=1.5.3"
matplotlib = "^3.7.1"
requests = "^2.31.0"
keyring = "^23.13.1"
backoff = "^2.2.1"
importlib-metadata = "^6.7.0"
ztfquery = "^1.26.1"
astroplan = "^0.9"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.2"
types-pyyaml = "^6.0.12.11"
types-requests = "^2.31.0.1"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88