[tool.poetry]
name = "betternot"
version = "0.1.0"
description = "Toolset for interacting with the Nordic Optical Telescope (NOT)"
authors = ["simeonreusch <simeon.reusch@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.scripts]
not = "main:run"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
astropy = "^5.0"
numpy = "^1.21.0"
pandas = ">=1.2.5"
matplotlib = ">=3.5.0"
requests = ">=2.23.0"
keyring = "^23.7.0"
backoff = "^1.10.0"
importlib-metadata = ">=6.7.0"
ztfquery = ">=1.20.0"
astroplan = ">=0.9"
pypeit = "^1.13.0"

[tool.poetry.dev-dependencies]
black = ">023.3.0"
coveralls = ">=3.3.1"
isort = ">=5.12.0"
pytest = ">=7.3.2"
types-pyyaml = ">5.4.9"
types-requests = ">=2.31.0.1"
mypy = ">01.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88